# slint-codeeditor

./: .gitignore  Cargo.toml  README.md  build.rs
.claude/: settings.json  settings.local.json
doc/: README.md
examples/demo/: main.rs
proj/: RULES  rulestools.toml
src/: demo.js  lib.rs  main.rs
src/adapter/: file_ops.rs  keyboard.rs  mod.rs  mouse.rs  state_push.rs  theme.rs
src/core/: editor_state.rs  mod.rs  tokenizer.rs
src/gateway/: mod.rs
ui/: app-window.slint  editor.slint  types.slint  widget.slint
ui/editor/: editor-view.slint  line-number.slint
ui/status-bar/: status-bar.slint
ui/tokens/: theme.slint
ui/toolbar/: toolbar.slint
