[package]
name = "slint_codeeditor_widget"
version = "0.1.0"
edition = "2021"
description = "Code editor with syntax highlighting built in Slint + Rust"

[lib]
name = "slint_codeeditor_widget"
crate-type = ["rlib"]

[[example]]
name = "demo"
path = "examples/demo/main.rs"

[dependencies]
slint = "1.15"
rfd = "0.15"

[build-dependencies]
slint-build = "1.15"
